<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <EditTextPreference
        android:defaultValue="@string/settings_name_default"
        android:inputType="textPersonName"
        android:key="@string/settings_name_key"
        android:selectAllOnFocus="true"
        android:title="Name" />

    <ListPreference
        android:defaultValue="@string/settings_gender_default"
        android:entries="@array/gender"
        android:entryValues="@array/gender"
        android:key="@string/settings_gender_key"
        android:title="Avatar" />

    <EditTextPreference
        android:defaultValue="@string/settings_criteria_default"
        android:inputType="number"
        android:key="@string/settings_criteria_key"
        android:selectAllOnFocus="true"
        android:title="Criteria" />

</PreferenceScreen>
