<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle"
    card_view:cardCornerRadius="@dimen/dimen4"
    card_view:cardElevation="@dimen/dimen4"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/dimen2">

    <LinearLayout style="@style/Sem_ParentLinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/course_name"
                style="@style/Subject_textview"
                android:textColor="@color/colorPrimaryDark" />

            <RelativeLayout
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100">

                <ProgressBar
                    android:id="@+id/circularProgressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular"
                    android:secondaryProgress="100" />

                <TextView
                    android:id="@+id/tv"
                    style="@style/course_progress_text"
                    android:text="@string/_0" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout style="@style/Subject_Part2_LL">

            <TextView
                style="@style/card_subheading_course"
                android:text="@string/total_hrs" />

            <TextView
                android:id="@+id/course_total_hours"
                style="@style/value" />

            <Button
                android:id="@+id/two_button"
                style="@style/add_button"
                android:text="@string/two" />

        </LinearLayout>

        <LinearLayout style="@style/Subject_Part2_LL">

            <TextView
                style="@style/card_subheading_course"
                android:text="@string/completed_hrs" />

            <TextView
                android:id="@+id/course_comp_hours"
                style="@style/value" />

            <Button
                android:id="@+id/one_button"
                style="@style/add_button"
                android:text="@string/hour" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
