<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        tools:context="aparna.appy.android.example.com.prsence.MainActivity">

        <ImageView
            style="@style/logo"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/semester"
            style="@style/main_button"
            android:text="@string/semester" />

        <Button
            android:id="@+id/course"
            style="@style/main_course_button"
            android:text="@string/course" />

        <Button
            android:id="@+id/about"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen48"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textColor="@color/blue"
            android:textSize="@dimen/font16" />

    </LinearLayout>
</ScrollView>
